@@ -75,7 +75,7 @@ public class IlleGITimate {
      * someone, download the jar files from Google
      */
     private String generateSha1Hex(File file) throws IOException {
-        return DigestUtils.sha1Hex(Files.readString(file.toPath()));
+        return DigestUtils.sha1Hex(Files.readAllBytes(file.toPath()));
     }
 
     /*
